--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**FEATURE EXTRACTION**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +174,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +316,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +458,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,17 +472,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<10000x3 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 10000 stored elements in Compressed Sparse Row format>"
+       "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+       "\twith 10000 stored elements and shape (10000, 3)>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +639,7 @@
        "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +798,7 @@
        "4                0.0              1.0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +961,7 @@
        "4                0.0              1.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,13 +1013,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# PICKING\n",
     "with open(\"scaler.pkl\",\"wb\") as file:\n",
     "    pickle.dump(scaler,file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### ANN IMPLEMENTATION #####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, TensorBoard\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Sequential Neural Network -->Dense(if 64 then in that particular layer there are 64 nodes) -->Activation Function\n",
+    " --> Optimizers(Updating the weights) --> Minimize Loss Function --> Classification metrics(accuracy) & Regression metrics(mse,mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_3 (Dense)             (None, 64)                832       \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 32)                2080      \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 1)                 33        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 2945 (11.50 KB)\n",
+      "Trainable params: 2945 (11.50 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BUILDING AN ANN MODEL\n",
+    "model = Sequential([\n",
+    "     Dense(64,activation=\"relu\",input_shape=(X_train.shape[1],)), ## HL1 Connected to input layer\n",
+    "     Dense(32,activation=\"relu\"), # HL2 Connected to HL1\n",
+    "     Dense(1,activation=\"sigmoid\") # OUTPUT Layers\n",
+    "    ]\n",
+    "\n",
+    ")\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "opt = tf.keras.optimizers.Adam(learning_rate=0.01)\n",
+    "loss =tf.keras.losses.BinaryCrossentropy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## COMPILE THE MODEL\n",
+    "model.compile(optimizer=opt,loss=\"binary_crossentropy\",metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## SET UP THE TENSORBOARD\n",
+    "import datetime\n",
+    "from tensorflow.keras.callbacks import EarlyStopping,TensorBoard\n",
+    "log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "tensorflow_callback = TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## SET UP THE EarlyStopping (if loss value isnt decreasing)\n",
+    "early_stopping_callback = EarlyStopping(monitor=\"val_loss\",patience=10,restore_best_weights=True)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3436 - accuracy: 0.8605 - val_loss: 0.3479 - val_accuracy: 0.8590\n",
+      "Epoch 2/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3388 - accuracy: 0.8616 - val_loss: 0.3484 - val_accuracy: 0.8555\n",
+      "Epoch 3/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3371 - accuracy: 0.8587 - val_loss: 0.3657 - val_accuracy: 0.8570\n",
+      "Epoch 4/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3400 - accuracy: 0.8602 - val_loss: 0.3458 - val_accuracy: 0.8550\n",
+      "Epoch 5/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3322 - accuracy: 0.8626 - val_loss: 0.3591 - val_accuracy: 0.8590\n",
+      "Epoch 6/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3330 - accuracy: 0.8618 - val_loss: 0.3485 - val_accuracy: 0.8535\n",
+      "Epoch 7/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3300 - accuracy: 0.8630 - val_loss: 0.3454 - val_accuracy: 0.8590\n",
+      "Epoch 8/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3270 - accuracy: 0.8661 - val_loss: 0.3456 - val_accuracy: 0.8620\n",
+      "Epoch 9/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3245 - accuracy: 0.8643 - val_loss: 0.3579 - val_accuracy: 0.8545\n",
+      "Epoch 10/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3223 - accuracy: 0.8671 - val_loss: 0.3548 - val_accuracy: 0.8555\n",
+      "Epoch 11/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3183 - accuracy: 0.8689 - val_loss: 0.3496 - val_accuracy: 0.8555\n",
+      "Epoch 12/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3188 - accuracy: 0.8689 - val_loss: 0.3622 - val_accuracy: 0.8545\n",
+      "Epoch 13/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3180 - accuracy: 0.8669 - val_loss: 0.3585 - val_accuracy: 0.8525\n",
+      "Epoch 14/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3147 - accuracy: 0.8726 - val_loss: 0.3850 - val_accuracy: 0.8555\n",
+      "Epoch 15/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3126 - accuracy: 0.8701 - val_loss: 0.3615 - val_accuracy: 0.8595\n",
+      "Epoch 16/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3076 - accuracy: 0.8727 - val_loss: 0.3620 - val_accuracy: 0.8575\n",
+      "Epoch 17/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3069 - accuracy: 0.8692 - val_loss: 0.3654 - val_accuracy: 0.8615\n"
+     ]
+    }
+   ],
+   "source": [
+    "### TRAINING THE NEURAL NETWORK\n",
+    "history=model.fit(\n",
+    "    X_train,y_train,validation_data=(X_test,y_test), epochs = 100,\n",
+    "    callbacks =[tensorflow_callback,early_stopping_callback]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\ANN_Banking_Prediction\\venv\\Lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save(\"model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## LOAD TENSORBOARD EXTENSION\n",
+    "%load_ext tensorboard\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-5f70015adba4aec1\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-5f70015adba4aec1\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir logs/fit"
    ]
   },
   {
@@ -1039,7 +1303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
