Integrating ANN with Streamlit Web App

--- a/predictions.ipynb
+++ b/predictions.ipynb
@@ -387,7 +387,7 @@
     }
    ],
    "source": [
-    "## Scaling teh input data\n",
+    "## Scaling the input data\n",
     "\n",
     "input_scaled= scaler.transform(input_df)\n",
     "input_scaled"
