--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,9 +1031,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From d:\\ANN_Banking_Prediction\\venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -1058,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1076,7 @@
        "12"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,22 +1087,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "WARNING:tensorflow:From d:\\ANN_Banking_Prediction\\venv\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense_3 (Dense)             (None, 64)                832       \n",
+      " dense (Dense)               (None, 64)                832       \n",
       "                                                                 \n",
-      " dense_4 (Dense)             (None, 32)                2080      \n",
+      " dense_1 (Dense)             (None, 32)                2080      \n",
       "                                                                 \n",
-      " dense_5 (Dense)             (None, 1)                 33        \n",
+      " dense_2 (Dense)             (None, 1)                 33        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 2945 (11.50 KB)\n",
@@ -1117,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1171,39 +1182,33 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3436 - accuracy: 0.8605 - val_loss: 0.3479 - val_accuracy: 0.8590\n",
+      "WARNING:tensorflow:From d:\\ANN_Banking_Prediction\\venv\\Lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\ANN_Banking_Prediction\\venv\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "250/250 [==============================] - 1s 3ms/step - loss: 0.4028 - accuracy: 0.8310 - val_loss: 0.3708 - val_accuracy: 0.8505\n",
       "Epoch 2/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3388 - accuracy: 0.8616 - val_loss: 0.3484 - val_accuracy: 0.8555\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3565 - accuracy: 0.8533 - val_loss: 0.3414 - val_accuracy: 0.8550\n",
       "Epoch 3/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3371 - accuracy: 0.8587 - val_loss: 0.3657 - val_accuracy: 0.8570\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3463 - accuracy: 0.8574 - val_loss: 0.3457 - val_accuracy: 0.8595\n",
       "Epoch 4/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3400 - accuracy: 0.8602 - val_loss: 0.3458 - val_accuracy: 0.8550\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3448 - accuracy: 0.8571 - val_loss: 0.3439 - val_accuracy: 0.8595\n",
       "Epoch 5/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3322 - accuracy: 0.8626 - val_loss: 0.3591 - val_accuracy: 0.8590\n",
+      "250/250 [==============================] - 0s 1ms/step - loss: 0.3426 - accuracy: 0.8595 - val_loss: 0.3442 - val_accuracy: 0.8530\n",
       "Epoch 6/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3330 - accuracy: 0.8618 - val_loss: 0.3485 - val_accuracy: 0.8535\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3390 - accuracy: 0.8601 - val_loss: 0.3430 - val_accuracy: 0.8570\n",
       "Epoch 7/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3300 - accuracy: 0.8630 - val_loss: 0.3454 - val_accuracy: 0.8590\n",
+      "250/250 [==============================] - 0s 1ms/step - loss: 0.3357 - accuracy: 0.8634 - val_loss: 0.3519 - val_accuracy: 0.8600\n",
       "Epoch 8/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3270 - accuracy: 0.8661 - val_loss: 0.3456 - val_accuracy: 0.8620\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3355 - accuracy: 0.8625 - val_loss: 0.3565 - val_accuracy: 0.8550\n",
       "Epoch 9/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3245 - accuracy: 0.8643 - val_loss: 0.3579 - val_accuracy: 0.8545\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3332 - accuracy: 0.8669 - val_loss: 0.3437 - val_accuracy: 0.8580\n",
       "Epoch 10/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3223 - accuracy: 0.8671 - val_loss: 0.3548 - val_accuracy: 0.8555\n",
+      "250/250 [==============================] - 0s 1ms/step - loss: 0.3290 - accuracy: 0.8646 - val_loss: 0.3492 - val_accuracy: 0.8620\n",
       "Epoch 11/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3183 - accuracy: 0.8689 - val_loss: 0.3496 - val_accuracy: 0.8555\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3297 - accuracy: 0.8655 - val_loss: 0.3457 - val_accuracy: 0.8590\n",
       "Epoch 12/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3188 - accuracy: 0.8689 - val_loss: 0.3622 - val_accuracy: 0.8545\n",
-      "Epoch 13/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3180 - accuracy: 0.8669 - val_loss: 0.3585 - val_accuracy: 0.8525\n",
-      "Epoch 14/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3147 - accuracy: 0.8726 - val_loss: 0.3850 - val_accuracy: 0.8555\n",
-      "Epoch 15/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3126 - accuracy: 0.8701 - val_loss: 0.3615 - val_accuracy: 0.8595\n",
-      "Epoch 16/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3076 - accuracy: 0.8727 - val_loss: 0.3620 - val_accuracy: 0.8575\n",
-      "Epoch 17/100\n",
-      "250/250 [==============================] - 0s 2ms/step - loss: 0.3069 - accuracy: 0.8692 - val_loss: 0.3654 - val_accuracy: 0.8615\n"
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.3260 - accuracy: 0.8659 - val_loss: 0.3438 - val_accuracy: 0.8635\n"
      ]
     }
    ],
@@ -1217,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1230,12 +1235,12 @@
     }
    ],
    "source": [
-    "model.save(\"model.h5\")"
+    "model.save(\"binary_classification_model.h5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,13 +1250,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 9504), started 0:07:08 ago. (Use '!kill 9504' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 9504), started 2 days, 4:40:13 ago. (Use '!kill 9504' to kill it.)"
       ]
      },
      "metadata": {},
@@ -1261,11 +1266,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-8922064f3d890ca1\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-9cccb348f343e242\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-8922064f3d890ca1\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-9cccb348f343e242\");\n",
        "          const url = new URL(\"http://localhost\");\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
